@startuml

title __HOME's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.home {
      class com.fahadali.intranet.fragments.ui.home.HomeFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.home {
      class com.fahadali.intranet.fragments.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.home.HomeFragment o-- com.fahadali.intranet.fragments.ui.home.HomeViewModel : homeViewModel
  com.fahadali.intranet.fragments.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
